--- a/UD5 - Eventos y formularios/5c Gestión de CSS/Modo claro y oscuro/Estilos con view transitions/style.css
+++ b/UD5 - Eventos y formularios/5c Gestión de CSS/Modo claro y oscuro/Estilos con view transitions/style.css
@@ -5,8 +5,8 @@
 }
 
 ::view-transition-new(root){
-	animation: move-in 1000ms ease-in;
-	/* animation: circle-in 500ms; */
+	/* animation: move-in 1000ms ease-in; */
+	animation: circle-in 500ms;
 }
 
 @keyframes  move-in {
